--- a/ex022/fundo001.html
+++ b/ex022/fundo001.html
@@ -9,19 +9,33 @@
         div.quadrado{
             display: inline-block;
             border: 1px solid black ;
+            border-radius: 10px;
+            background-color: lightgrey;
             width: 300px;
             height: 300px;
+        }
+        div#q1{
+            background-color: skyblue;
+        }
+        div#q2{
+            background-image: linear-gradient(to bottom, yellow, red);;
+        }
+        div#q3{
+            background-image: url('imagens/pattern001.png');
+        }
+        body{
+            background-image: url('imagens/wallpaper001.jpg');
         }
     </style>
 </head>
 <body>
-    <div class="quadrado">
+    <div class="quadrado" id="q1">
 
     </div>
-    <div class="quadrado">
+    <div class="quadrado" id="q2">
 
     </div>
-    <div class="quadrado">
+    <div class="quadrado" id="q3">
 
     </div>
 </body>
