--- a/ex022/fundo006.html
+++ b/ex022/fundo006.html
@@ -11,7 +11,7 @@
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
         main{
@@ -29,6 +29,13 @@
     <main>
         <h1>Teste de fundo de imagem</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat, tenetur quo culpa commodi incidunt distinctio officiis, mollitia hic reprehenderit molestiae error enim ullam provident adipisci autem veritatis consequuntur sed voluptatem.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat, tenetur quo culpa commodi incidunt distinctio officiis, mollitia hic reprehenderit molestiae error enim ullam provident adipisci autem veritatis consequuntur sed voluptatem.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat, tenetur quo culpa commodi incidunt distinctio officiis, mollitia hic reprehenderit molestiae error enim ullam provident adipisci autem veritatis consequuntur sed voluptatem.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat, tenetur quo culpa commodi incidunt distinctio officiis, mollitia hic reprehenderit molestiae error enim ullam provident adipisci autem veritatis consequuntur sed voluptatem.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat, tenetur quo culpa commodi incidunt distinctio officiis, mollitia hic reprehenderit molestiae error enim ullam provident adipisci autem veritatis consequuntur sed voluptatem.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat, tenetur quo culpa commodi incidunt distinctio officiis, mollitia hic reprehenderit molestiae error enim ullam provident adipisci autem veritatis consequuntur sed voluptatem.</p>
+
+
     </main>
     
 </body>
